objects/BB_Invoice_Payment__c/BB_Invoice_Payment__c.object-meta.xml
<CustomObject>
    <label>Billboard Invoice Payment</label>
    <nameField>
        <displayFormat>BBIPN-{0000000}</displayFormat>
        <label>Payment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billboard Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>