objects/BB_Invoice_Payment__c/fields/Billboard_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Invoice__c</fullName>
    <label>Billboard Invoice</label>
    <referenceTo>Billboard_Invoice__c</referenceTo>
    <relationshipName>Paymnets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>