objects/BB_Invoice_Payment__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <externalId>true</externalId>
    <label>Old Check #</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>