objects/BB_Invoice_Payment__c/fields/Check_New__c.field-meta.xml
<CustomField>
    <fullName>Check_New__c</fullName>
    <label>Check #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>