objects/BB_Invoice_Payment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <formula>Billboard_Invoice__r.Billboard_Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor</label>
    <type>Text</type>
</CustomField>